force-app/main/default/objects/JBCXM__SurveyResponse__c/JBCXM__SurveyResponse__c.object-meta.xml
<CustomObject>
    <description>Object to store the NPS Survey responses provided by the customers.</description>
    <label>NPSSurvey Response</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Survey Response Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPSSurvey Response</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>