force-app/main/default/objects/JBCXM__SurveyResponse__c/fields/JBCXM__Account__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Account__c</fullName>
    <description>Account / Customer</description>
    <inlineHelpText>Account / Customer</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>SurveyResponse</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>