force-app/main/default/objects/JBCXM__SurveyResponse__c/fields/JBCXM__NPSScore__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__NPSScore__c</fullName>
    <description>NPS Score entered by the user.</description>
    <inlineHelpText>NPS Score entered by the user.</inlineHelpText>
    <label>NPS Score</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>