force-app/main/default/objects/JBCXM__SurveyResponse__c/fields/JBCXM__NPSScoreText__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__NPSScoreText__c</fullName>
    <description>Stores nps score in text format</description>
    <label>NPS Score Text</label>
    <length>4</length>
    <type>Text</type>
</CustomField>