force-app/main/default/objects/JBCXM__SurveyResponse__c/fields/JBCXM__ResponseDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ResponseDate__c</fullName>
    <description>Date on which the response was provided</description>
    <inlineHelpText>Date on which the response was provided</inlineHelpText>
    <label>Response Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>