force-app/main/default/objects/JBCXM__SurveyResponse__c/fields/JBCXM__SurveyCode__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SurveyCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Survey Code</description>
    <inlineHelpText>Survey Code</inlineHelpText>
    <label>Survey Code</label>
    <referenceTo>JBCXM__SurveyMaster__c</referenceTo>
    <relationshipName>SurveyResponse</relationshipName>
    <type>Lookup</type>
</CustomField>