force-app/main/default/objects/JBCXM__SurveyResponse__c/fields/JBCXM__TrueNPS__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__TrueNPS__c</fullName>
    <description>True NPS. For Promoter = 100, Passive = 0 and Detractor = -100.</description>
    <formula>IF(JBCXM__NPSScore__c &lt;=6,-100,IF(JBCXM__NPSScore__c &gt;=9,100,0))</formula>
    <label>True NPS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>