force-app/main/default/objects/JBCXM__SurveyResponse__c/fields/JBCXM__UserEmail__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__UserEmail__c</fullName>
    <description>Email address of the user providing the comment.</description>
    <inlineHelpText>Email address of the user providing the comment.</inlineHelpText>
    <label>User Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>