force-app/main/default/objects/JBCXM__SurveyResponse__c/fields/JBCXM__UserName__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__UserName__c</fullName>
    <description>Name of the user providing the comment.</description>
    <inlineHelpText>Name of the user providing the comment.</inlineHelpText>
    <label>User Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>