force-app/main/default/objects/JBCXM__SurveyResponse__c/fields/JBCXM__UserRole__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__UserRole__c</fullName>
    <defaultValue>&quot;User&quot;</defaultValue>
    <description>Role of the user providing the comment.</description>
    <inlineHelpText>Role of the user providing the comment.</inlineHelpText>
    <label>User Role</label>
    <length>128</length>
    <type>Text</type>
</CustomField>